--- a/module-solution3/css/styles.css
+++ b/module-solution3/css/styles.css
@@ -13,14 +13,29 @@
 .navbar-brand {
 	color: red;
 }
-.chicken {
-	height: 1000px;
+.chicken{
+	/* height: 1000px; */
 	margin-top: 10px;
 	padding-top: 10px;
 	border: 1px solid #61122f;
 	background-color: lightgray;
 }
 
+.veggie {
+	/* height: 1000px; */
+	margin-top: 10px;
+	padding-top: 10px;
+	border: 1px solid #61122f;
+	background-color: lightgreen;
+}
+
+.sushi {
+	/* height: 1000px; */
+	margin-top: 10px;
+	padding-top: 10px;
+	border: 1px solid #61122f;
+	background-color: lightyellow;
+}
 .navbar-default {
 	        border-color: #e7e7e7;
 }
